[package]
name = "valeria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.50"
poem-openapi = { version = "2.0.21", features = ["swagger-ui", "rapidoc", "redoc"] }
tokio = { version = "1.23.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version ="0.3.16", features = ["env-filter"] }
